--- a/.env.example
+++ b/.env.example
@@ -12,6 +12,6 @@ DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
-ALGOLIA_APP_ID=
-ALGOLIA_SECRET=
-ALGOLIA_SEARCH=
+ALGOLIA_APP_ID=5YO44PIHQ4
+ALGOLIA_SECRET=5544bfcc36709f7f9cca6676e4fca254
+ALGOLIA_SEARCH=80a9d73a2fd59f61d7df07b7fef37be7
